changed vehicle list component

--- a/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
+++ b/src/app/customerdashboard/vehicles/vehicle/vehicle.component.html
@@ -2,7 +2,7 @@
 <div class="container"  >
     <div class="pt-3 pb-2 mb-3 ">
         
-        <p class="border-bottom"><b>Dashboard/</b>customer profile</p>
+        <p class="border-bottom"><b>Dashboard/</b>Register vehicle</p>
        </div>
     <div class="jumbotron-fluid">
         <form  autocomplete="on" #form="ngForm"  (submit)="onSubmit(form)">
@@ -11,7 +11,7 @@
             <div class="" >
                
                 <input type="hidden" class="form-control" name="id" [(ngModel)]="service.FormData.id" id="id"  #id="ngModel">
-               
+                
               </div>
             <div class="" >
               <label for="">Registration Number</label>
