--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -26,9 +26,9 @@
             </a>
           </li>
           
-          <li class="nav-item" style="background-color:black">
-            <a class="nav-link" href="#"  style="color:white">
-            Reserve vehicle
+          <li class="nav-item" style="background-color:black" routerLink="/booking">
+            <a class="nav-link"  style="color:white">
+            Reserve service date
             </a>
           </li>
 
