--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -12,7 +12,19 @@
           </div>
           <div class="  text-center  p-10 border border-info" style="padding:40px;margin-top:50px">
               <h3>Sign Up</h3>
-      
+            <div class="row">
+              <div class="col-md-6">
+                <div class="formGroup">
+                  <input type="text" class="form-control" placeholder="First Name" #fname required>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="formGroup">
+                  <input type="text" class="form-control" placeholder="Last Name" #lname required>
+                </div>
+              </div>
+            </div>
+            <br>
             <div class="formGroup">
               <input type="email" class="form-control" placeholder="Email Address" #userEmail required>
             </div>
@@ -22,7 +34,11 @@
             </div>
             <br>
             <div class="formGroup">
-              <input type="button" class="btn btn-info btn-block my-4" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value)">
+              <input type="text" class="form-control" placeholder="telephone" #telephone required>
+            </div>
+            <br>
+            <div class="formGroup">
+              <input type="button" class="btn btn-info btn-block my-4" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value,fname.value,lname.value,telephone.value)">
             </div>
       
             
