--- a/src/app/forgot-passord/forgot-passord.component.html
+++ b/src/app/forgot-passord/forgot-passord.component.html
@@ -4,27 +4,33 @@
 <div class="container">
   <div class="row">
       <div class="col-md-4"></div>
-      <div class="col-md-4 jumbotron">
+      <div class="col-md-4 ">
           <div class="displayTable">
               <div class="displayTableCell">
+                  <div class="text-center  p-10 border border-info" style="padding:40px;margin-top:100px">
                 <div class="authBlock">
-                  <h3>Reset Password</h3>
-            
                   
+                      <h3>Reset Password</h3>
             
-                  <div class="formGroup">
-                    <input type="email" class="form-control" placeholder="Email Address" #passwordResetEmail required>
+                      <br>
+            
+                      <div class="formGroup">
+                        <input type="email" class="form-control" placeholder="Email Address" #passwordResetEmail required>
+                      </div>
+                      <br>
+                      <!-- Calling ForgotPassword from AuthService Api -->
+                      <div class="formGroup">
+                        <input type="submit" class="btn btn-info btn-block my-4" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
+                      </div>
+                      <br>
+                      <div class="redirectToLogin">
+                          <span>Go back to ? <a class="redirect" routerLink="/sign-in">Log In</a></span>
+                        </div>
                   </div>
-                  <br>
-                  <!-- Calling ForgotPassword from AuthService Api -->
-                  <div class="formGroup">
-                    <input type="submit" class="btn btn-primary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
-                  </div>
+               
                 </div>
                 <br>
-                <div class="redirectToLogin">
-                  <span>Go back to ? <a class="redirect" routerLink="/sign-in">Log In</a></span>
-                </div>
+               
             
               </div>
             </div>
