--- a/src/app/qrscanner/qrscanner.component.html
+++ b/src/app/qrscanner/qrscanner.component.html
@@ -1,7 +1,15 @@
+
+<div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+                       
+        </div>
+        <div class="col-md-4"></div>
+</div>
 <qr-scanner
-        [debug]="false"
-        [canvasWidth]="1080"
-        [canvasHeight]="720" 
-        [stopAfterScan]="true"
-        [updateTime]="500"> 
+[debug]="true"
+[canvasWidth]="1080"
+[canvasHeight]="720" 
+[stopAfterScan]="true"
+[updateTime]="500"> 
 </qr-scanner>
