--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container" style="margin-top:50px">
+<div class="container" style="margin-top:50px;background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
  
   <div class="row ">
     <div class="col-md-4"></div>
@@ -11,7 +11,7 @@
         </div>
     </div>
     <br>
-    <div class="col-md-4  text-center  p-10 border border-info" style="padding:40px">
+    <div class="col-md-4  text-center  p-10 border border-info" style="padding:40px;background-color:white;opacity:0.92;">
     <p class="h4 mb-4">Sign in</p>
       
       <input type="email" id="defaultLoginFormEmail" class="form-control" placeholder="user email"  #userName required>
