--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+<div class="container" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;margin-top:20px">
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
@@ -10,7 +10,7 @@
           <div class="authBlock">
           
           </div>
-          <div class="  text-center  p-10 border border-info" style="padding:40px;margin-top:50px">
+          <div class="  text-center  p-10 border border-info" style="padding:40px;margin-top:40px;background-color:white;opacity:0.94">
               <h3>Sign Up</h3>
             <div class="row">
              
