--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
 
   <!-- Collapsible content -->
   <div class="collapse navbar-collapse" id="basicExampleNav">
-
+    <img src="../../assets/image/s (2).png" style="height:60px">
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
@@ -23,30 +23,27 @@
           <span class="sr-only"></span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/sign-in">sign in</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/register-user">sign up</a>
-      </li>
+     
 
-      <!-- Dropdown -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
+     
 
     </ul>
     <!-- Links -->
 
     <form class="form-inline">
       <div class="md-form my-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <ul class="navbar-nav mr-auto">
+         
+         
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/register-user">sign up</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-info" routerLink="/sign-in">signin</a>
+          </li>
+         
+    
+        </ul>
       </div>
     </form>
   </div>
