added toastre notification system

--- a/src/app/customerdashboard/booking/booking.component.html
+++ b/src/app/customerdashboard/booking/booking.component.html
@@ -2,18 +2,123 @@
 <div class="container-fluid">
   
   <div class="row">
-    <div class="col-md-3" style="background-color:rgb(2, 12, 22);height:600px">
+    <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:auto">
     <app-sidenav></app-sidenav>
     </div>
   
-    <div class="col-md-9">
+    <div class="col-md-10">
         <br>
         <p class="border-bottom"><b>Dashboard/</b>Reserve service date</p>
     <div class="row">
-        
-      <form action="">
-        
-      </form>
+        <div class="col-md-6">
+          <form action="">
+            <div>
+              <label for="" class="d-block p-2 bg-info text-white">select the vehicle</label>
+             <select name="" id="" class="form-control">
+               <option value="">toyota car RW4521</option>
+             </select>
+            </div>
+            <br>
+            <div>
+                <label for="" class="d-block p-2 bg-info text-white">select date</label>
+               <input type="date" class="form-control">
+              </div>
+              <br>
+            <div class="d-block p-2 bg-info text-white">Here are our car washing packages select one of the followings</div>
+            
+            <hr>
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios">
+              <label class="custom-control-label" for="defaultUnchecked"><b>QUICK WASH</b> – Body wash, and tyre dressing (15 Minutes)</label>
+            </div>
+            <br>
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" id="defaultUnchecked2" name="defaultExampleRadios">
+              <label class="custom-control-label" for="defaultUnchecked2"><b>DETAILED WASH</b> – Body wash, carpet wash, glass cleaning, dash cleaning and tyre dressing (30 Minutes)</label>
+            </div>
+            <br>
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" id="defaultUnchecked3" name="defaultExampleRadios">
+              <label class="custom-control-label" for="defaultUnchecked3"><b>WASH & WAX </b>  - Body wash, carpet wash, glass cleaning, tyre dressing, interior vacuuming, and 3M wax (45 Minutes)
+              </label>
+            </div>
+            <br>
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" id="defaultUnchecked4" name="defaultExampleRadios">
+              <label class="custom-control-label" for="defaultUnchecked4"><b>AUTO WASH </b>– Body wash, under wash, carpet wash, glass cleaning and interior vacuuming (20 Minutes)
+              </label>
+            </div>
+            <br>
+            <div class="d-block p-2 bg-info text-white">Interior detailing</div> 
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="defaultUnchecked10">
+                <label class="custom-control-label" for="defaultUnchecked10"><b>INTERIOR DETAILING </b>involves a deep cleaning of the whole interior cabin of the automobile. includes,</label>
+            </div>
+                
+            <p style="margin-left:25px">
+                <br>
+                Removal of seats
+                <br>
+                Cleaning of seats
+                <br>
+                Drying of seats
+                <br>
+                Vacuum cleaning
+                <br>
+            </p>
+            
+            
+            <div class="d-block p-2 bg-info text-white">Lubrication service</div> 
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="lubrication1">
+                <label class="custom-control-label" for="lubrication1"><b>LUBRICATION</b> - We top up engine oil, transmission fluid, brake fluid, clutch & power steering fluid up to optimal capacity or completely change it using high performance brand lubricants. .</label>
+            </div>
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="lubrication2">
+                <label class="custom-control-label" for="lubrication2"><b>UNDERCARRIAGE DEGREASING</b>  - We completely degrease the undercarriage of the automobile, removing accumulated oil and grit using the application of pressure washes with advanced pressure sensors.</label>
+            </div>
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="lubrication3">
+                <label class="custom-control-label" for="lubrication3"><b>TYRE & DASH DRESSING</b>  - We restore the true colour and natural gloss to the dashboard and leaves tyres looking new.</label>
+            </div>
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="lubrication4">
+                <label class="custom-control-label" for="lubrication4"><b>EXTERIOR WAXING </b>   - We apply a hard wax with a clear coat that produces a high-gloss finish to new or old car paint. The wax also acts as a protective layer that helps maintain the paint and protect it for longer.</label>
+            </div>
+            <br>
+            <div class="d-block p-2 bg-info text-white">Other specialized services</div> 
+            <br>  
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="special1">
+                <label class="custom-control-label" for="special1"><b>Engine Oil and Filter Change</b>   -We keep your engine running smoothly with regularly scheduled oil changes</label>
+            </div>
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="special2">
+                <label class="custom-control-label" for="special2"><b>Engine Cleaning</b>   -Over time the engine collects grease and sludge deposits. At luckvin Car Care we clean out your engine using special cleaning fluid </label>
+            </div>
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="special3">
+                <label class="custom-control-label" for="special3"><b>Radiator Coolant Flush and Replacement</b> -A car radiator is responsible for keeping the engine cool. Over a period of time sediment builds up and decreases cooling efficiency. </label>
+            </div>
+            <br>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="special4">
+                <label class="custom-control-label" for="special4"><b>Engine Scanning</b> -Our engine scanning uses state of the art diagnostic tools to identify and correct faults in your engine. Engine malfunctions can be quickly diagnosed and fixed.</label>
+            </div>
+            <div>
+    
+            </div>
+          </form>
+        </div>
+        <div class="col-md-6"></div>
+    
     </div>
 
 
