--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
-<nav class="d-md-block bg-light sidebar " style="margin-top:20px" >
-    <div class="sidebar-sticky " style="background-color:rgb(2, 12, 22)" >
+<nav class="d-md-block bg-light sidebar " style="margin-top:20px;height:auto" >
+    <div class="sidebar-sticky " style="background-color:rgb(2, 12, 22);height:auto" >
       <ul class="nav flex-column">
         <li class="nav-item" >
            
@@ -8,9 +8,9 @@
         <!-- Calling SignOut() Api from AuthService -->
         
         
-          <a class="btn btn-primary" (click)="authService.SignOut()">
+          <button class="btn btn-outline-warning" (click)="authService.SignOut()">
             Log out
-          </a>
+          </button>
           <br>
          
 
